--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^52.0.16",
-    "expo-dev-client": "~5.0.5",
-    "expo-splash-screen": "~0.29.13",
+    "expo": "~52.0.36",
+    "expo-dev-client": "~5.0.12",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.0",
-    "expo-updates": "~0.26.10",
+    "expo-updates": "~0.27.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.7",
+    "react-native-mmkv": "^3.2.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
