--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "expo": "~52.0.36",
     "expo-dev-client": "~5.0.12",
     "expo-splash-screen": "~0.29.22",
@@ -14,7 +15,6 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-mmkv": "^3.2.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
